fixed single project title spacing and rails-ified project.rb where statement

--- a/app/assets/stylesheets/styles/inside-page.scss
+++ b/app/assets/stylesheets/styles/inside-page.scss
@@ -3,7 +3,7 @@
 .single-titles {
     width: 100%;
     padding: 30px 0 12px 0;
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
